Mac: Toggle fullscreen asynchronously when recovering from a mid-transition request

BridgedNativeWidgetUITest.FullscreenSynchronousState currently fails on 10.13.
AppKit used to be able to start a new fullscreen transition inside the
windowDidEnterFullScreen: observer/delegate callback. Now it fails and just
prints text to stdio like "not in a fullscreen state".

To fix, post the call to -[NSWindow toggleFullScreen:] asynchronously.

Bug: 749939
Change-Id: I3426c961c77db8eef2cf418aedc5df7e17aac468
Reviewed-on: https://chromium-review.googlesource.com/900610
Reviewed-by: Sarah Chan <spqchan@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#534549}
Former-commit-id: 34aecb34894fd6bead6ab5146bd6afd1e792bebf